--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,5 @@
-TELEGRAM_BOT_TOKEN="YOUR:TOKEN"
-TELEGRAM_CHAT_ID="9379992"
+TELEGRAM_BOT_TOKEN=YOUR:TOKEN
+TELEGRAM_CHAT_ID=TELEGRAM_BOT_TOKEN
 DEBUG=False
+STRIPE_SECRET_KEY=STRIPE_SECRET_KEY
+STRIPE_PUBLISHABLE_KEY=STRIPE_SECRET_KEY
