--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,4 @@ TELEGRAM_CHAT_ID=TELEGRAM_BOT_TOKEN
 DEBUG=False
 STRIPE_SECRET_KEY=STRIPE_SECRET_KEY
 STRIPE_PUBLISHABLE_KEY=STRIPE_SECRET_KEY
+DJANGO_SECRET_KEY=SECRET_KEY
